--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -8,6 +8,6 @@ description=The description can be longer. Using [CR] you can create a newline. 
 
 
 [locations]
-url=https://github.com/GSIGuy/GSIGuy.net
+url=https://raw.githubusercontent.com/GSIGuy/GSIGuy.net/master/_repo/addons.xml
 output_path=repo/
 
